Letter spacing fixed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,7 +52,7 @@ font-size: 3em;
 
 h2 {
   font-size: 1.2em;
-  letter-spacing: -1px;
+  letter-spacing: 1px;
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
